fix enlaces html

--- a/assets/ayuda/simple/backend/modelamiento-del-proceso/acciones.html
+++ b/assets/ayuda/simple/backend/modelamiento-del-proceso/acciones.html
@@ -37,7 +37,7 @@
 						<li class="active current"><a href="acciones.html" title="Acciones" >Acciones</a></li>
 						<li><a href="disenador.html" title="Diseñador" >Diseñador</a></li>
 						<li><a href="reportes.html" title="Reportes" >Reportes</a></li>
-						<li class="last"><a href="reglas-de-negocio-y-reglas-de-validacion.min.css" title="Reglas de Negocio y Reglas de Validación" >Reglas de Negocio y Reglas de Validación</a></li>
+						<li class="last"><a href="reglas-de-negocio-y-reglas-de-validacion.html" title="Reglas de Negocio y Reglas de Validación" >Reglas de Negocio y Reglas de Validación</a></li>
 						</ul></li>
 						<li><a href="../seguimiento-de-procesos.html" title="Seguimiento de Procesos" >Seguimiento de Procesos</a></li>
 						<li class="last"><a href="../widgets.html" title="Widgets" >Widgets</a></li>
