se agrega ayuda de adjuntar documentos en acciones

--- a/assets/ayuda/simple/backend/modelamiento-del-proceso/acciones.html
+++ b/assets/ayuda/simple/backend/modelamiento-del-proceso/acciones.html
@@ -118,6 +118,7 @@
 					<li>Campo <em>Para</em>: indica el destinatario del correo electrónico, pude ser más de uno separado por coma “,” o indicar una variable por parámetro.</li>
 					<li>Campo <em>tema</em>: corresponde al asunto del correo electrónico.</li>
 					<li>Campo <em>Contenido</em>: es el contenido del correo electrónico.</li>
+					<li>Campo <em>Adjunto</em>: Permite adjuntar documentos utilizando variables. Puede ser más de uno separados por coma ",".</li>
 					</ul>
 					<p> </p>
 					<ul>
